src/objects/PincodeHubMapping__c.object
<CustomObject>
    <fields>
        <fullName>Hub_Name__c</fullName>
        <label>Hub Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>canShipLarge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>canShipLarge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>canShipMedium__c</fullName>
        <defaultValue>false</defaultValue>
        <label>canShipMedium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Hub_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Hub Open</label>
        <type>Checkbox</type>
    </fields>
    <label>Pincode Hub Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pickup Pin Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pincode Hub Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>